skusime fix transfer + overflow

--- a/src/app/user/pages/home-page/home-page.component.scss
+++ b/src/app/user/pages/home-page/home-page.component.scss
@@ -934,13 +934,13 @@ h6 {
     > div {
       cursor: pointer;
       position: relative;
-      transform: skew(-15deg);
+      transform: skew(-15deg) translate3d(0, 0, 0);
       background: #111111;
       overflow: hidden;
-      -webkit-transform: skew(-15deg);
-      -moz-transform: skew(-15deg);
-      -ms-transform: skew(-15deg);
-      -o-transform: skew(-15deg);
+      -webkit-transform: skew(-15deg) translate3d(0, 0, 0);
+      -moz-transform: skew(-15deg) translate3d(0, 0, 0);
+      -ms-transform: skew(-15deg) translate3d(0, 0, 0);
+      -o-transform: skew(-15deg) translate3d(0, 0, 0);
       > div > div {
         filter: grayscale(1);
         position: absolute;
@@ -961,6 +961,8 @@ h6 {
       overflow: hidden;
       width: 34%;
       cursor: pointer;
+      -webkit-backface-visibility: hidden;
+      -moz-backface-visibility: hidden;
       h1 {
         left: 65%;
         transform: skew(15deg) rotate(-5deg) translateX(-65%);
@@ -999,6 +1001,8 @@ h6 {
       left: -2px;
       width: 20%;
       border-left: 3px solid;
+      -webkit-backface-visibility: hidden;
+      -moz-backface-visibility: hidden;
       border-image-source: linear-gradient(
         0deg,
         rgba(17, 17, 17, 1) 7%,
@@ -1023,6 +1027,8 @@ h6 {
       }
     }
     .sec3 {
+      -webkit-backface-visibility: hidden;
+      -moz-backface-visibility: hidden;
       .s3 {
         overflow: hidden;
 
@@ -1052,6 +1058,8 @@ h6 {
       }
     }
     .sec4 {
+      -webkit-backface-visibility: hidden;
+      -moz-backface-visibility: hidden;
       .s4 {
         overflow: hidden;
       }
